# GraphGuruGallery

./: .gitignore  README.md  main.py  pyproject.toml
src/: auto_visualize_dataframe.ipynb  declarative_sine_wave.ipynb  declarative_sine_wave.py  interactive_data_explorer.py  massive_scatter_plot.py  neural_net_visualizer.py  report.html  runtime_profiler.py  simple_cnn.yaml  waffle_chart.py
src/.ipynb_checkpoints/: auto_visualize_dataframe-checkpoint.ipynb
