[project]
name = "graphgurugallery"
version = "0.1.0"
description = "Python Visualization Libraries Lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.0",
    "datashader>=0.18.2",
    "holoviews>=1.21.0",
    "lux>=0.5.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pygwalker>=0.4.9.15",
    "pywaffle>=1.1.1",
    "pyyaml>=6.0.3",
    "viztracer>=1.0.4",
]
